[package]
name = "cosmos-bridge"
version = "0.1.0"
edition = "2021"
description = "A simple cross-chain bridge for Cosmos ecosystem"
authors = ["Your Name <your.email@example.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.1.0"
cw-storage-plus = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "1.1.0"
cw-multi-test = "0.16.2"